# noterot

./: App.tsx  RecorderScreen.tsx  app.json  codemagic.yaml  package-lock.json  package.json
android/: build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/noterot/: MainActivity.kt  MainApplication.kt  WhispererModule.kt  WhispererPackage.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/Whisperer/: Whisperer.m  WhispererModule.h  WhispererModule.mm
ios/noterot/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/noterot.xcodeproj/: project.pbxproj
ios/noterot.xcodeproj/xcshareddata/xcschemes/: noterot.xcscheme
ios/noterot.xcworkspace/: contents.xcworkspacedata
